# bdgop_rs

./: .gitignore  Cargo.toml  readme.md
src/: lib.rs  main.rs
src/ops/: mod.rs
