[package]
edition = "2021"
name = "bdgop_rs"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = {version = "^3.1", features = ["derive"]}
csv = "^1.1"
serde = {version = "^1", features = ["derive"]}
serde_json = "^1"
